Build first layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<nz-layout class="app-layout">
+<router-outlet></router-outlet>
+
+<!-- <nz-layout class="app-layout">
   <nz-sider class="menu-sidebar"
     nzCollapsible
     nzWidth="256px"
@@ -51,4 +53,4 @@
       </div>
     </nz-content>
   </nz-layout>
-</nz-layout>
+</nz-layout> -->
