--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,11 +1,25 @@
 <nz-layout>
   <nz-header>
     <div class="logo"></div>
-    <ul nz-menu nzTheme="dark" nzMode="horizontal">
-      <li nz-menu-item (click)="onClickMenuItem('Home')">Home</li>
-      <li nz-menu-item (click)="onClickMenuItem('Dash board')">Dash board</li>
-      <li nz-menu-item (click)="onClickMenuItem('Collection')">Collection</li>
-    </ul>
+    <div class="menu-container">
+      <ul nz-menu nzTheme="dark" nzMode="horizontal" class="menu-left">
+        <li nz-menu-item (click)="onClickMenuItem('Home')">Home</li>
+        <li nz-menu-item (click)="onClickMenuItem('Dashboard')">Dashboard</li>
+        <li nz-menu-item (click)="onClickMenuItem('Collection')">Collection</li>
+        <li nz-menu-item (click)="onClickMenuItem('Plan')">Plan</li>
+      </ul>
+      <div class="menu-right">
+        <nz-select
+          [(ngModel)]="selectedLang"
+          style="width: 120px"
+          class="menu-right__select"
+        >
+          <nz-option nzLabel="English" nzValue="en"></nz-option>
+          <nz-option nzLabel="Vietnamese" nzValue="vi"></nz-option>
+        </nz-select>
+        <nz-avatar nzIcon="user" class="menu-right__avatar"></nz-avatar>
+      </div>
+    </div>
   </nz-header>
   <nz-content>
     <!-- <nz-breadcrumb>
