--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -28,7 +28,11 @@
       <nz-breadcrumb-item>App</nz-breadcrumb-item>
     </nz-breadcrumb> -->
     <div class="inner-content">
-      <router-outlet></router-outlet>
+      <router-outlet
+        type="primary"
+        disabled="false"
+        loading="false"
+      ></router-outlet>
     </div>
   </nz-content>
   <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
